--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -1,10 +1,11 @@
 /******************************************************************
-Theme Name: Bones (Rename Me!)
-Theme URI: http://www.themble.com/bones
-Description: This site was built using the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You can also view the conversation on Twitter by following the hashtag: <a href="http://twitter.com/#!/search/%23wpbones">#wpbones</a>.
-Author: Your Name Here
-Author URI: http://www.yoururlhere.com
-Version: 1.2
+Theme Name: Andrew Ringler 2012
+Theme URI: https://github.com/andrewringler/andrewringler.com
+Description: Andrew Ringler 2012 theme for andrewringler.com
+Based on Bones (http://www.themble.com/bones)
+Author: Andrew Ringler
+Author URI: http://www.andrewringler.com
+Version: 1.0
 Tags: flexble-width, translation-ready, microformats, rtl-language-support
 
 License: WTFPL
