--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -1,10 +1,10 @@
 /******************************************************************
 Theme Name: Andrew Ringler 2012
-Theme URI: http://www.themble.com/bones
-Description: This site was built using the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You can also view the conversation on Twitter by following the hashtag: <a href="http://twitter.com/#!/search/%23wpbones">#wpbones</a>.
+Theme URI: https://github.com/andrewringler/andrewringler.com
+Description: Andrew Ringler wordpress theme for 2012. Based on the Bones Development Theme. For more information about Bones or to view documentation, you can visit the <a href="https://github.com/eddiemachado/bones/issues" title="Bones Issues">Bones Issues</a> page on Github. You can also view the conversation on Twitter by following the hashtag: <a href="http://twitter.com/#!/search/%23wpbones">#wpbones</a>.
 Author: Andrew Ringler
 Author URI: http://www.andrewringler.com
-Version: 1.2
+Version: 0.1
 Tags: flexble-width, translation-ready, microformats, rtl-language-support
 
 License: WTFPL
