--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Andrew Ringler
 Author URI: http://andrewringler.com
 Description: Theme for andrewringler.com
-Version: 1.0
+Version: 0.4
 License: GNU General Public License
 License URI: license.txt
 Tags:
@@ -110,20 +110,20 @@ textarea {
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1.5;
-	
+
 	font-family: 'Open Sans', sans-serif;
     font-weight: 300;
 }
 
 body {
     color: #333;
-	
+
 	padding-left: 1em;
     margin: 0.5em auto 1em auto;
     max-width: 850px;
 }
 body.home {
-    margin: 4em auto 1em auto;	
+    margin: 4em auto 1em auto;
 }
 
 
@@ -142,13 +142,13 @@ h1 {
 h3 {
 	font-size: 1.1em;
 	line-height: 1.5;
-	
+
   	margin-top: 1.5em;
   	margin-bottom: 0.25em;
 }
 h4 {
 	font-weight: 600;
-	color: #444;	
+	color: #444;
 }
 
 hr {
@@ -341,7 +341,7 @@ a, a:visited {
 a:hover,
 a:focus,
 a:active {
-	text-shadow: 0 0 0.2em rgba(150,150,255,0.2), 0 0 0.2em rgba(150,150,255,0.2), 0 0 0.2em rgba(150,150,255,0.2); 	
+	text-shadow: 0 0 0.2em rgba(150,150,255,0.2), 0 0 0.2em rgba(150,150,255,0.2), 0 0 0.2em rgba(150,150,255,0.2);
 	text-decoration: underline;
 }
 
@@ -541,8 +541,12 @@ body.home #profile-header {
   max-height: 250px;
   border: 1px solid #0f0f0f;
 }
-
-
+.asr-post-list li .wp-post-image {
+	display: block;
+}
+.asr-post-list li {
+	margin-bottom: 2em;
+}
 
 
 
@@ -680,11 +684,11 @@ object {
 
 /* =Font Loading
 ----------------------------------------------- */
-.wf-loading h1, 
-.wf-loading h2, 
-.wf-loading h3, 
-.wf-loading p, 
-.wf-loading li, 
+.wf-loading h1,
+.wf-loading h2,
+.wf-loading h3,
+.wf-loading p,
+.wf-loading li,
 .wf-loading span,
 .wf-loading time {
 	opacity: 0;
@@ -709,11 +713,11 @@ h1, h2, h3, p, li, span, time {
 @media only screen and (max-device-width: 900px) {
 	#content {
 	  max-width: 95%;
-	}	
+	}
 	body.home {
 	    margin-top: 0.5em;
 	}
-	
+
 	body.home #profile-header {
 	  	min-height: inherit;
 		padding-left: 0;
@@ -723,11 +727,11 @@ h1, h2, h3, p, li, span, time {
 		display: block;
 		max-width: 95%;
 	}
-	
+
 	#profile-header-image {
 	  max-width: 75%;
 	  position: inherit;
-	}	
+	}
 	#profile-header h1 {
 		font-size: 1em;
 	}
