--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -123,7 +123,7 @@ body {
     max-width: 850px;
 }
 body.home {
-	margin: 0.5em 2em 1em 2em;
+	margin: 0.5em 2em 1em 0.75em;
 }
 
 /* Headings */
@@ -479,10 +479,10 @@ a:active {
 	}
 }
 
-nav { list-style: none; display: inline-block; margin-bottom: 2em; }
+nav { list-style: none; display: inline-block; margin-bottom: 0.5em; }
 nav li { display: inline-block; margin-right: 0.75em; padding-right: 0.2em; }
 #blogname { display: inline-block; }
-body.home nav li a {	padding: 1px 2px; }
+body.home nav li a { font-size: 0.9em; padding: 1px 2px; }
 body.home nav li a:hover,
 body.home nav li a:focus,
 body.home nav li a:active {
@@ -491,11 +491,18 @@ body.home nav li a:active {
 	color: black;
 	color: rgb(121,13,30) !important;
 }
+.home-post-title { font-weight: normal; position: relative; padding-left: 5em;}
+.home-post-date { position: absolute; left: 0; }
+#abstract { font-size: 1.2em; margin-bottom: 4em; font-style: italic; }
+
 
 /* =Content
 ----------------------------------------------- */
 #content {
   max-width: 500px;
+}
+body.home #content {
+	max-width: none;
 }
 .sticky {
 }
@@ -736,12 +743,12 @@ h1, h2, h3, p, li, span, time {
 /* =Responsive Breakpoints
  * not mobile-first
 ----------------------------------------------- */
-@media only screen and (max-device-width: 900px) {
+@media only screen and (max-width: 990px) {
 	#content {
 	  max-width: 95%;
 	}
 	body.home {
-	   margin: 0.25em;
+	   margin: 0.25em 0.5em;
 	}
 
 	body.home #profile-header {
@@ -767,12 +774,5 @@ h1, h2, h3, p, li, span, time {
 		max-width: 100%;
 		margin-top: 0.5em;
 	}
-}
-
-
-@media screen and (min-height:20em) {
-	#aboutme { position: absolute; bottom: 0.25em; left: 3em; max-width: 35em; }
-}
-@media only screen and (max-device-width: 900px) and (min-height:20em) {
-	#aboutme { left: 1em; margin-right: 0.25em;}
+	#abstract { font-size: 1em; margin-bottom: 2em; }
 }
