--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -116,11 +116,10 @@ textarea {
 }
 
 body {
-    color: #333;
-
+  color: #333;
 	padding-left: 1em;
-    margin: 0.5em 2em 1em 2em;
-    max-width: 850px;
+  margin: 0.5em 2em 1em 2em;
+  max-width: 850px;
 }
 body.home {
 	margin: 0.5em 2em 1em 0.75em;
@@ -485,7 +484,7 @@ a:active {
 /* =Content
 ----------------------------------------------- */
 #content {
-  max-width: 500px;
+  max-width: 990px;
 }
 body.home #content {
 	max-width: none;
@@ -733,6 +732,12 @@ h1, h2, h3, p, li, span, time {
 	transition: opacity 0.15s ease-in-out;
 }
 
+
+
+/* =Video Embed
+----------------------------------------------- */
+/* http://embedresponsively.com/ */
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 
 
