--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -576,7 +576,9 @@ body.home nav li a:active {
 	font-size: 0.8em;
 	margin-right: 0.5em;
 }
-
+.entry-content, p, li {
+	max-width: 40em;
+}
 
 /* =Asides
 ----------------------------------------------- */
@@ -737,7 +739,7 @@ h1, h2, h3, p, li, span, time {
 /* =Video Embed
 ----------------------------------------------- */
 /* http://embedresponsively.com/ */
-.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-bottom: 0.75em; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 
 
@@ -748,8 +750,8 @@ h1, h2, h3, p, li, span, time {
 	#content {
 	  max-width: 95%;
 	}
-	body.home {
-	   margin: 0.25em 0.5em;
+	body {
+	   margin: 0.5em 0.5em 1em 0.25em;
 	}
 
 	body.home #profile-header {
@@ -776,4 +778,5 @@ h1, h2, h3, p, li, span, time {
 		margin-top: 0.5em;
 	}
 	#abstract { font-size: 1em; margin-bottom: 2em; }
+	.entry-title { line-height: 1.2em; font-size: 1.3em; }
 }
