--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Andrew Profile Theme 2015
-Theme URI: http://underscores.me/
+Theme Name: Andrew Ringler 2016
+Theme URI: https://github.com/andrewringler/andrewringler.com
 Author: Andrew Ringler
 Author URI: http://andrewringler.com
 Description: Theme for andrewringler.com
-Version: 0.5.1
+Version: 0.5.2
 License: GNU General Public License
 License URI: license.txt
 Tags:
@@ -12,12 +12,13 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
- Andrew Profile Theme 2015 is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
+Andrew Ringler 2016 is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
 
 Resetting and rebuilding styles have been helped along thanks to the fine work of
 Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
 along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 and Blueprint http://www.blueprintcss.org/
+
 */
 
 
