--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -424,57 +424,29 @@ a:active {
 	display: block;
 	text-decoration: none;
 }
-.navigation-main ul ul {
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	display: none;
-	float: left;
-	position: absolute;
-		top: 1.5em;
-		left: 0;
-	z-index: 99999;
-}
-.navigation-main ul ul ul {
-	left: 100%;
-	top: 0;
-}
-.navigation-main ul ul a {
-	width: 200px;
-}
-.navigation-main ul ul li {
-}
-.navigation-main li:hover > a {
-}
-.navigation-main ul ul :hover > a {
-}
-.navigation-main ul ul a:hover {
-}
 .navigation-main ul li:hover > ul {
 	display: block;
 }
-.navigation-main li.current_page_item a,
-.navigation-main li.current-menu-item a {
+
+/* sub-menus */
+.navigation-main .sub-menu {
+	text-transform: lowercase;
+	font-weight: normal;
+	font-size: 0.9em;
+}
+.navigation-main .sub-menu .menu-item {
+	margin: 0; padding: 0;
+	display: list-item;
+	float: none;
+	position: static;
+	margin-left: 0.25em;
+}
+.navigation-main .sub-menu .menu-item a:before {
+	content: "- ";
+	color: steelblue;
+	opacity: 0.5;
 }
 
-/* Small menu */
-.menu-toggle {
-	display: none;
-	cursor: pointer;
-}
-
-.main-small-navigation ul {
-	display: none;
-}
-
-@media screen and (max-width: 600px) {
-	.menu-toggle,
-	.main-small-navigation ul.nav-menu.toggled-on {
-		display: block;
-	}
-
-	.navigation-main ul {
-		display: none;
-	}
-}
 
 
 
