--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -566,20 +566,17 @@ nav li a:active {
 	padding: 0;
 }
 .wp-caption {
-	border: 1px solid #ccc;
 	margin-bottom: 1.5em;
 	max-width: 100%;
 }
 .wp-caption img[class*="wp-image-"] {
 	display: block;
-	margin: 1.2% auto 0;
-	max-width: 98%;
 }
 .wp-caption-text {
-	text-align: center;
-}
-.wp-caption .wp-caption-text {
-	margin: 0.8075em 0;
+	margin-top: 0.2em;
+	text-align: left;
+	font-size: 0.85em;
+	color: #444;
 }
 .site-content .gallery {
 	margin-bottom: 1.5em;
