--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -515,7 +515,7 @@ body.home #description { font-weight: normal; display: inline; margin-left: 3em;
 	max-width: 150px;
 	margin-bottom: 2em;
 }
-body.home canvas {
+#entries-p5js-animation {
 	z-index: -1;
 	position: absolute;
 	left: 0; top: 0;
