--- a/andrewringler-wp-theme/style.css
+++ b/andrewringler-wp-theme/style.css
@@ -140,6 +140,9 @@ h3, body.archive .entry-header h1 {
   	margin-top: 1.5em;
   	margin-bottom: 0.25em;
 }
+.entry-header {
+	margin-bottom: 1em;
+}
 h4 {
 	font-weight: 600;
 	color: #444;
@@ -471,7 +474,7 @@ body.home #content {
 }
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 0;
 }
 .entry-content p:last-of-type {
 	margin-bottom: 0;
